--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -22,9 +22,9 @@ jobs:
         env:
           NAME: dmstjq12 # 계정 명
           REPO: docker-node-nas # 레포 이름
-          VERSION: 0.1.1
+          VERSION: 20.9-alpine
         run: |
-          docker build -t $REPO .
+          docker build -t $REPO --build-arg VERSION=$VERSION .
           docker tag $REPO:latest $NAME/$REPO:$VERSION
           docker tag $REPO:latest $NAME/$REPO:latest
           docker push $NAME/$REPO:$VERSION
